Style the main menus

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
               <button class="c-menuButton a-gameMenu--settings" type="button">Settings</button>
             </li>
             <li class="c-screen--action">
-              <button class="c-menuButton a-gameMenu--back" type="button">Back</button>
+              <button class="c-menuButton a-gameMenu--back" type="button">Resume</button>
             </li>
             <li class="c-screen--action">
               <button class="c-menuButton a-gameMenu--mainMenu" type="button">Exit to main menu</button>
@@ -45,7 +45,7 @@
               <button class="c-menuButton a-mainMenu--continue" type="button">Continue</button>
             </li>
             <li class="c-screen--action">
-              <button class="c-menuButton a-mainMenu--newGame" type="button">Start new game</button>
+              <button class="c-menuButton a-mainMenu--newGame" type="button">Begin new collection</button>
             </li>
             <li class="c-screen--action">
               <button class="c-menuButton a-mainMenu--settings" type="button">Settings</button>
@@ -61,15 +61,14 @@
         <section class="c-screen a-newGame" aria-labelledby="a-newGame--title">
           <div id="a-newGame--title">
             <h1 class="c-screen--title" title="Warning">Warning</h1>
-            <p class="a-newGame--warning">Starting a new game will delete your save.</p>
+            <p class="a-newGame--warning">Starting a new collection will delete your progress.</p>
           </div>
           <ul class="c-screen--actions">
             <li class="c-screen--action">
-              <button class="c-menuButton a-newGame--back" type="button">Keep existing save</button>
+              <button class="c-menuButton a-newGame--back" type="button">Keep existing collection</button>
             </li>
             <li class="c-screen--action">
-              <button class="c-menuButton a-newGame--confirm" type="button" aria-describedby="a-newGame--confirmDescription">Start new game</button>
-              <span id="a-newGame--confirmDescription" class="u-helper">Start from the beginning</span>
+              <button class="c-menuButton a-newGame--confirm" type="button">Begin new collection</button>
             </li>
           </ul>
         </section>
@@ -121,7 +120,7 @@
             <div class="a-splash--logoSymbol" aria-hidden="true" role="presentation">Ω</div>
             <div class="a-splash--logoLine a-splash--logoLine-1">The</div>
             <div class="a-splash--logoLine a-splash--logoLine-2">Omega</div>
-            <div class="a-splash--logoLine a-splash--logoLine-2">Reach</div>
+            <div class="a-splash--logoLine a-splash--logoLine-3">Reach</div>
           </h1>
           <div class="a-splash--details">
             <div class="a-splash--version"></div>
