Add remaining settings

--- a/public/index.html
+++ b/public/index.html
@@ -97,6 +97,26 @@
               </div>
             </li>
             <li class="c-screen--field">
+              <label class="c-screen--label" id="a-settings--inputPreferenceLabel">Input preference</label>
+              <div class="c-select a-settings--inputPreference">
+                <button class="c-select--button c-select--previous" aria-label="Previous" aria-describedby="a-settings--inputPreferenceLabel">
+                  <i aria-hidden="true" role="presentation">◀</i>
+                </button>
+                <div class="c-select--value"></div>
+                <button class="c-select--button c-select--next" aria-label="Next" aria-describedby="a-settings--inputPreferenceLabel">
+                  <i aria-hidden="true" role="presentation">▶</i>
+                </button>
+              </div>
+            </li>
+            <li class="c-screen--field">
+              <label class="c-screen--label" id="a-settings--inputHoldLabel">Enable hold interactions</label>
+              <div class="c-toggle a-settings--inputHold">
+                <button class="c-toggle--button" role="switch" aria-checked="false" aria-labeledby="a-settings--inputHoldLabel">
+                  <span class="c-toggle--off">Off</span>
+                  <span class="c-toggle--on">On</span>
+                </button
+            </li>
+            <li class="c-screen--field">
               <div class="c-screen--label" id="a-settings--graphicsOnLabel">Enable graphics</div>
               <div class="c-toggle a-settings--graphicsOn">
                 <button class="c-toggle--button" role="switch" aria-checked="false" aria-labeledby="a-settings--graphicsOnLabel">
