--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
               <button class="c-menuButton a-mainMenu--continue" type="button">Continue</button>
             </li>
             <li class="c-screen--action">
-              <button class="c-menuButton a-mainMenu--newGame" type="button">Begin new collection</button>
+              <button class="c-menuButton a-mainMenu--newGame" type="button">Curate new collection</button>
             </li>
             <li class="c-screen--action">
               <button class="c-menuButton a-mainMenu--settings" type="button">Settings</button>
@@ -68,7 +68,7 @@
               <button class="c-menuButton a-newGame--back" type="button">Keep existing collection</button>
             </li>
             <li class="c-screen--action">
-              <button class="c-menuButton a-newGame--confirm" type="button">Begin new collection</button>
+              <button class="c-menuButton a-newGame--confirm" type="button">Curate new collection</button>
             </li>
           </ul>
         </section>
