Improve accessibility of select component

--- a/public/index.html
+++ b/public/index.html
@@ -97,13 +97,13 @@
               </div>
             </li>
             <li class="c-screen--field">
-              <label class="c-screen--label" id="a-settings--inputPreferenceLabel">Input preference</label>
+              <label class="c-screen--label">Input preference</label>
               <div class="c-select a-settings--inputPreference">
-                <button class="c-select--button c-select--previous" aria-label="Previous" aria-describedby="a-settings--inputPreferenceLabel">
+                <button class="c-select--button c-select--previous" aria-label="Previous input preference" aria-describedby="a-settings--inputPreferenceValue">
                   <i aria-hidden="true" role="presentation">◀</i>
                 </button>
-                <div class="c-select--value"></div>
-                <button class="c-select--button c-select--next" aria-label="Next" aria-describedby="a-settings--inputPreferenceLabel">
+                <div class="c-select--value" id="a-settings--inputPreferenceValue"></div>
+                <button class="c-select--button c-select--next" aria-label="Next input preference" aria-describedby="a-settings--inputPreferenceValue">
                   <i aria-hidden="true" role="presentation">▶</i>
                 </button>
               </div>
