Animate the splash screen

--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
       <div class="a-app--screen a-app--splash">
         <section class="c-screen a-splash" role="button" tabindex="-1">
           <h1 class="a-splash--logo">
-            <div class="a-splash--logoSymbol" aria-hidden="true" role="presentation">Ω</div>
+            <div class="a-splash--logoSymbol" aria-hidden="true" role="presentation"><i>Ω</i></div>
             <div class="a-splash--logoLine a-splash--logoLine-1">The</div>
             <div class="a-splash--logoLine a-splash--logoLine-2">Omega</div>
             <div class="a-splash--logoLine a-splash--logoLine-3">Reach</div>
