--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,10 @@
           </div>
 
           <nav class="a-game--nav">
-            <button class="a-game--scan">
-              <div class="a-game--scanLabel">Scan</div>
-              <div class="a-game--scanProgress" aria-hidden="true" role="presentation"></div>
-              <div class="a-game--scanProgressBackground" aria-hidden="true" role="presentation"></div>
+            <button class="a-game--interact">
+              <div class="a-game--interactLabel">Interact</div>
+              <div class="a-game--interactProgress" aria-hidden="true" role="presentation"></div>
+              <div class="a-game--interactProgressBackground" aria-hidden="true" role="presentation"></div>
             </button>
             <button class="a-game--up" aria-label="Move Up" title="Move Up" type="button">⮝</button>
             <button class="a-game--left" aria-label="Move Left" title="Move Left" type="button" aria-disabled="true">⮜</button>
