--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
             <h1 class="a-game--name">Object name</h1>
             <p class="a-game--description">Object description</p>
             <ul class="a-game--attributes">
-              <li class="a-game--attribute">Common trait</li>
-              <li class="a-game--attribute a-game--attribute-rare">Rare trait</li>
-              <li class="a-game--attribute a-game--attribute-undiscovered">Undiscovered trait</li>
+              <li class="a-game--attribute">Common quirk</li>
+              <li class="a-game--attribute a-game--attribute-rare">Rare quirk</li>
+              <li class="a-game--attribute a-game--attribute-undiscovered">Unexamined quirk</li>
               <li class="a-game--attribute a-game--attribute-instrument a-game--attribute-undiscovered">Unrecovered instrument</li>
               <li class="a-game--attribute a-game--attribute-instrument">Instrument recovered</li>
             </ul>
