Implement test tutorial

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
           <nav class="a-game--nav">
             <button class="a-game--interact">
-              <div class="a-game--interactLabel">Interact</div>
+              <div class="a-game--interactLabel">Inspect</div>
               <div class="a-game--interactProgress" aria-hidden="true" role="presentation"></div>
               <div class="a-game--interactProgressBackground" aria-hidden="true" role="presentation"></div>
             </button>
