--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="./favicon.png" />
     <link rel="stylesheet" type="text/css" href="./styles.min.css" />
+    <link rel="preload" href="./font/roboto-bold.woff" as="font" type="font/woff" />
   </head>
   <body role="application">
     <main class="a-app">
