--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
             </div>
           </section>
 
-          <div class="u-screenReader a-game--live" aria-live="assertive"></div>
+          <div class="u-screenReader a-game--live" aria-live="polite"></div>
         </section>
       </div>
 
